--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.6",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
